# kittiOdometry

./: CMakeLists.txt  Readme.md
include/: common.hpp  kittiIO.hpp  kittiOdom.hpp
src/: doCode.cpp  kittiIO.cpp  kittiOdom.cpp  main.cpp
